@@ -36,6 +36,7 @@ import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 
 import htsjdk.samtools.util.CloserUtil;
@@ -44,13 +45,11 @@ import htsjdk.variant.variantcontext.VariantContext;
 import htsjdk.variant.variantcontext.VariantContextBuilder;
 import htsjdk.variant.variantcontext.writer.VariantContextWriter;
 import htsjdk.variant.vcf.VCFHeader;
-import htsjdk.variant.vcf.VCFHeaderLine;
 import htsjdk.variant.vcf.VCFHeaderLineCount;
 import htsjdk.variant.vcf.VCFHeaderLineType;
 import htsjdk.variant.vcf.VCFInfoHeaderLine;
 
 import javax.xml.bind.JAXBContext;
-import javax.xml.bind.JAXBException;
 import javax.xml.bind.Unmarshaller;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
@@ -61,6 +60,12 @@ import javax.xml.transform.dom.DOMSource;
 import javax.xml.transform.stream.StreamResult;
 import javax.xml.transform.stream.StreamSource;
 
+import org.apache.http.client.methods.CloseableHttpResponse;
+import org.apache.http.client.methods.HttpPost;
+import org.apache.http.entity.ByteArrayEntity;
+import org.apache.http.entity.ContentType;
+import org.apache.http.impl.client.CloseableHttpClient;
+import org.apache.http.impl.client.HttpClients;
 import org.ensembl.vep.*;
 import org.w3c.dom.Attr;
 import org.w3c.dom.Document;
@@ -68,10 +73,8 @@ import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 
 import com.github.lindenb.jvarkit.io.TeeInputStream;
-import com.github.lindenb.jvarkit.util.htsjdk.HtsjdkVersion;
 import com.github.lindenb.jvarkit.util.picard.SAMSequenceDictionaryProgress;
 import com.github.lindenb.jvarkit.util.so.SequenceOntologyTree;
-import com.github.lindenb.jvarkit.util.vcf.AbstractVCFFilter3;
 import com.github.lindenb.jvarkit.util.vcf.VcfIterator;
 
 /**
@@ -80,62 +83,17 @@ import com.github.lindenb.jvarkit.util.vcf.VcfIterator;
  *
  */
 public class VcfEnsemblVepRest 
-	extends AbstractVCFFilter3
+	extends AbstractVcfEnsemblVepRest
 	{
+	private static final org.slf4j.Logger LOG = com.github.lindenb.jvarkit.util.log.Logging.getLog(VcfEnsemblVepRest.class);
 	public static final String TAG="VEPTRCSQ";
 	@SuppressWarnings("unused")
 	private static final ObjectFactory _fool_javac=null;
-	private int batchSize = 100;
-	private String server = "http://grch37.rest.ensembl.org";
-	private String extension = "/vep/homo_sapiens/region";
-	private boolean teeResponse=false;
 	private Unmarshaller unmarshaller=null;
-	private boolean xmlBase64=false;
 	private DocumentBuilder documentBuilder;
 	private Transformer xmlSerializer;
+	private CloseableHttpClient httpClient = null;
 	
-	@Override
-	public String getProgramDescription() {
-		return "Annotate a VCF with ensembl REST API";
-		}
-	
-	@Override
-	protected String getOnlineDocUrl() {
-		return DEFAULT_WIKI_PREFIX+"VcfEnsemblVepRest";
-		}
-	
-	public void setServer(String server) {
-		this.server = server;
-		}
-	
-	public void setExtension(String extension) {
-		this.extension = extension;
-		}
-	
-	public void setBatchSize(int bastchSize) {
-		this.batchSize = bastchSize;
-		}
-	
-	public void setTeeResponse(boolean teeResponse)
-		{
-		this.teeResponse = teeResponse;
-		}
-	
-	public void setXmlBase64(boolean xmlBase64) {
-		this.xmlBase64 = xmlBase64;
-	}
-	
-	@Override
-	public void printOptions(java.io.PrintStream out)
-		{
-		out.println(" -o (fileout) output. Default: stdout");
-		out.println(" -s (server) REST server . Default: "+this.server);
-		out.println(" -e (path extension)  Default: stdout"+this.extension);
-		out.println(" -n (batch size)  Default: "+this.batchSize);
-		out.println(" -T . 'Tee' xml response to stderr ");
-		out.println(" -x save whole XML document as xml base 64.");
-		super.printOptions(out);
-		}
 	
 	private static String createInputContext(VariantContext ctx)
 		{
@@ -174,19 +132,19 @@ public class VcfEnsemblVepRest
 	private long lastMillisec=-1L;
 	private Object generic_vep(List<VariantContext> contexts,boolean xml_answer) throws IOException
 		{
-		info("Running VEP "+contexts.size());
-		OutputStream wr=null;
-		URLConnection urlConnection=null;
-		HttpURLConnection  httpConnection=null;
+		LOG.info("Running VEP "+contexts.size());
 		InputStream response =null;
 		javax.xml.transform.Source inputSource=null;
+		HttpPost httpPost = null;
 		try {
 		    if ( this.lastMillisec!=-1L && this.lastMillisec+ 5000<  System.currentTimeMillis())
 		    	{
 		    	try {Thread.sleep(1000);} catch(Exception err){}
 		    	}
-		
-			 URL url = new URL(this.server + this.extension);
+				 
+		    httpPost = new HttpPost(this.server + this.extension);
+			 
+			 
 			 StringBuilder queryb=new StringBuilder();
 			 queryb.append("{ \"variants\" : [");
 			 for(int i=0;i< contexts.size();++i)
@@ -204,36 +162,32 @@ public class VcfEnsemblVepRest
 			 	}
 			 queryb.append("}");
 			 byte postBody[] = queryb.toString().getBytes();
-			 urlConnection = url.openConnection();
-			 httpConnection = (HttpURLConnection)urlConnection;
-			 httpConnection.setRequestMethod("POST");
-			 httpConnection.setRequestProperty("Content-Type", "application/json");
-			 httpConnection.setRequestProperty("Accept", "text/xml");
-			 httpConnection.setRequestProperty("Content-Length", Integer.toString(postBody.length));
-			 httpConnection.setUseCaches(false);
-			 httpConnection.setDoInput(true);
-			 httpConnection.setDoOutput(true);
-			  
-			 wr = httpConnection.getOutputStream();
-			 wr.write(postBody);
-			 wr.flush();
-			 wr.close();
-			 wr=null;
-			  
-			 //response = new TeeInputStream( httpConnection.getInputStream(),System.err,false);
-			 response =httpConnection.getInputStream();
-			 if(this.teeResponse)
-				 {
-				 System.err.println(queryb);
-				 response = new TeeInputStream(response,System.err,false);
-				 }
+
+			 httpPost.setHeader("Content-Type",ContentType.APPLICATION_JSON.getMimeType());
+			 httpPost.setHeader("Accept",ContentType.TEXT_XML.getMimeType());
+			 //httpPost.setHeader("Content-Length", Integer.toString(postBody.length));
+			 httpPost.setEntity(new ByteArrayEntity(postBody, ContentType.APPLICATION_JSON));
 			 
-			 int responseCode = httpConnection.getResponseCode();
+			 
+			 
+			 final CloseableHttpResponse httpResponse = httpClient.execute(httpPost);
+			 
+			 int responseCode = httpResponse.getStatusLine().getStatusCode();
 			  
 			 if(responseCode != 200)
 			 	{
 				throw new RuntimeException("Response code was not 200. Detected response was "+responseCode);
 			 	}
+
+			 
+			 //response = new TeeInputStream( httpConnection.getInputStream(),System.err,false);
+			 response =httpResponse.getEntity().getContent();
+			 if(this.teeResponse)
+				 {
+				 stderr().println(queryb);
+				 response = new TeeInputStream(response,stderr(),false);
+				 }
+			 
 			
 			  
 			if(xml_answer)
@@ -245,6 +199,7 @@ public class VcfEnsemblVepRest
 				inputSource =new StreamSource(response);
 				return unmarshaller.unmarshal(inputSource, Opt.class).getValue();
 				}
+			
 			} 
 		catch (Exception e)
 			{
@@ -252,9 +207,8 @@ public class VcfEnsemblVepRest
 			}
 		finally
 			{
-			CloserUtil.close(wr);
 			CloserUtil.close(response);
-			if(httpConnection!=null) httpConnection.disconnect();
+			if(httpPost!=null) httpPost.releaseConnection();
 			this.lastMillisec = System.currentTimeMillis(); 
 			}
 		}
@@ -267,21 +221,25 @@ public class VcfEnsemblVepRest
 		{
 		return (Document)generic_vep(contexts,true);
 		}
-
+	@Override
+	protected Collection<Throwable> call(String inputName) throws Exception
+		{
+		return doVcfToVcf(inputName);
+		}
+	
 	
 	@Override
-	protected void doWork(String inputSource, VcfIterator vcfIn,
-			VariantContextWriter out) throws IOException
+	protected Collection<Throwable> doVcfToVcf(
+			final String inputName,
+			final VcfIterator vcfIn,
+			final VariantContextWriter out) throws IOException
 		{
-		sun.misc.BASE64Encoder base64Encoder=new sun.misc.BASE64Encoder();
+	    final java.util.Base64.Encoder  base64Encoder=java.util.Base64.getEncoder();
 		final SequenceOntologyTree soTree= SequenceOntologyTree.getInstance();
 		VCFHeader header=vcfIn.getHeader();
 		List<VariantContext> buffer=new ArrayList<>(this.batchSize+1);
 		VCFHeader h2= new VCFHeader(header);
-		h2.addMetaDataLine(new VCFHeaderLine(getClass().getSimpleName()+"CmdLine",String.valueOf(getProgramCommandLine())));
-		h2.addMetaDataLine(new VCFHeaderLine(getClass().getSimpleName()+"Version",String.valueOf(getVersion())));
-		h2.addMetaDataLine(new VCFHeaderLine(getClass().getSimpleName()+"HtsJdkVersion",HtsjdkVersion.getVersion()));
-		h2.addMetaDataLine(new VCFHeaderLine(getClass().getSimpleName()+"HtsJdkHome",HtsjdkVersion.getHome()));
+		addMetaData(h2);
 		
 		if(!xmlBase64)
 			{
@@ -321,7 +279,7 @@ public class VcfEnsemblVepRest
 						for(VariantContext ctx2:buffer)
 							{
 							VariantContextBuilder vcb=new VariantContextBuilder(ctx2);
-							String inputStr = createInputContext(ctx2);
+							final String inputStr = createInputContext(ctx2);
 							Data mydata=null;
 							for(Data data:opt.getData())
 								{
@@ -331,7 +289,7 @@ public class VcfEnsemblVepRest
 								}
 							if(mydata==null)
 								{
-								info("No Annotation found for "+inputStr);
+								LOG.info("No Annotation found for "+inputStr);
 								out.add(ctx2);
 								continue;
 								}
@@ -362,7 +320,7 @@ public class VcfEnsemblVepRest
 									if(term==null)
 										{
 										sb.append(terms.get(j));
-										warning("No SO:Term found for "+terms.get(j));
+										LOG.warn("No SO:Term found for "+terms.get(j));
 										}
 									else
 										{
@@ -400,7 +358,7 @@ public class VcfEnsemblVepRest
 								Attr att = Element.class.cast(dataNode).getAttributeNode("input");
 								if(att==null)
 									{
-									warning("no @input in <data/>");
+									LOG.warn("no @input in <data/>");
 									continue;
 									}
 
@@ -414,7 +372,7 @@ public class VcfEnsemblVepRest
 								}
 							if(newdom==null)
 								{
-								info("No Annotation found for "+inputStr);
+								LOG.warn("No Annotation found for "+inputStr);
 								out.add(ctx2);
 								continue;
 								}
@@ -429,9 +387,8 @@ public class VcfEnsemblVepRest
 								{
 								throw new IOException(err);
 								}
-							//TODO in jdk8 replace with http://docs.oracle.com/javase/8/docs/api/java/util/Base64.html
 							VariantContextBuilder vcb=new VariantContextBuilder(ctx2);
-							vcb.attribute(TAG,base64Encoder.encode(sw.toString().getBytes()).
+							vcb.attribute(TAG,base64Encoder.encodeToString(sw.toString().getBytes()).
 									replaceAll("[\\s=]", ""));
 							out.add(vcb.make());
 							}
@@ -440,13 +397,14 @@ public class VcfEnsemblVepRest
 				if(ctx==null) break;
 				buffer.clear();
 				}
-			if(checkOutputError()) break;
+			if(out.checkError()) break;
 			}
 		progress.finish();
+		return RETURN_OK;
 		}
 	
 	@Override
-	public int initializeKnime() {
+	public Collection<Throwable> initializeKnime() {
 		JAXBContext context;
 		try {
 			DocumentBuilderFactory dbf = DocumentBuilderFactory.newInstance();
@@ -457,47 +415,24 @@ public class VcfEnsemblVepRest
 			
 			TransformerFactory trf=TransformerFactory.newInstance();
 			this.xmlSerializer = trf.newTransformer();
+			
+			
 		} catch (Exception e) {
-			error(e);
-			return -1;
+			return wrapException(e);
 		}
+		/** create http client */
+		this.httpClient = HttpClients.createDefault();
 		return super.initializeKnime();
 		}
 	
 	@Override
 	public void disposeKnime() {
 		this.unmarshaller=null;
+		CloserUtil.close(this.httpClient);
+		this.httpClient=null;
 		super.disposeKnime();
 		}
 	
-	@Override
-	public int doWork(String[] args)
-		{
-		com.github.lindenb.jvarkit.util.cli.GetOpt opt=new com.github.lindenb.jvarkit.util.cli.GetOpt();
-		int c;
-		while((c=opt.getopt(args,getGetOptDefault()+"o:s:e:n:Tx"))!=-1)
-			{
-			switch(c)
-				{
-				case 's': setServer(opt.getOptArg()); break;
-				case 'e': setExtension(opt.getOptArg()); break;
-				case 'o': setOutputFile(opt.getOptArg());break;
-				case 'n': setBatchSize(Integer.parseInt(opt.getOptArg()));break;
-				case 'T': setTeeResponse(true);break;
-				case 'x': setXmlBase64(true);break;
-				default:
-					{
-					switch(handleOtherOptions(c, opt,args))
-						{
-						case EXIT_FAILURE: return -1;
-						case EXIT_SUCCESS: return 0;
-						default:break;
-						}
-					}
-				}
-			}
-		return this.mainWork(opt.getOptInd(), args);
-		}
 	public static void main(String[] args) {
 		new VcfEnsemblVepRest().instanceMainWithExit(args);
 	}
